@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: ????
+  Features:
+    - Added two new scroll-pane GUI styles
   Changes:
     - translation.init() is now required to be run during on_configuration_changed, in addition to on_init
       - This is to prevent the module translating and returning strings for things that may not exist anymore
